# Smart-AI-App

./: .env.example  .gitignore  AGENTS.md  README.md  Readme-TH.md  package-lock.json  package.json  playwright.config.ts  server.js
dev/skills/deep-implement/: CHANGELOG.md  README.md  pyproject.toml
dev/skills/deep-implement/.claude-plugin/: plugin.json
dev/skills/deep-implement/agents/: code-reviewer.md
dev/skills/deep-implement/tests/: conftest.py  test_config.py  test_integration.py  test_path_safety.py  test_pre_commit.py  test_sections.py  test_setup_implementation_session.py  test_task_storage.py
dev/skills/deep-project/: CHANGELOG.md  README.md  pyproject.toml
dev/skills/deep-project/.claude-plugin/: plugin.json
e2e/: app-smoke.spec.ts
skills/gpt-image-prompt-engineer/: README.md  SKILL.md  pyproject.toml  requirements.txt  sample_output_th_fashion.json  skill.lock.json  subagents.json  test_results.txt
skills/gpt-image-prompt-engineer/agents/: orchestrator.md
skills/gpt-image-prompt-engineer/examples/: README_INPUT_OPTIONS_TH.md  agent_as_tool_structured_example.py  agent_function_tool_typed_example.py  hosted_shell_inline_skill_example.py  image_generation_tool_render_example.py  sandbox_native_skill_example.py  subagent_orchestrator_typed_example.py  subagents_as_tools_architecture.md
skills/gpt-image-prompt-engineer/python/: skill.py
skills/gpt-image-prompt-engineer/references/: subagents.md
skills/gpt-image-prompt-engineer/schemas/: input.schema.json  output.schema.json  ui.schema.json
skills/gpt-image-prompt-engineer/scripts/: run.sh  run_prompt_flow.py  verify.sh
skills/gpt-image-prompt-engineer/tests/: test_auto_decision_trace.py  test_deliverable_final_review.py  test_edit_validation.py  test_localization.py  test_model_free_contract.py  test_multiframe.py  test_prompt_language.py  test_python_adapter.py  test_quality_delta.py  test_reference_research.py  test_render_request.py  test_safety_quality.py  test_schema_contract.py  test_subagent_orchestration.py  test_ui_schema_completeness.py
(+460 files in other folders)
