[project]
name = "deep-implement"
version = "0.2.1"
description = "Portable implementation skill for deep-plan sections"
requires-python = ">=3.11"
dependencies = []
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Pierce Lamb"}
]
keywords = ["codex", "claude-compatible", "skill", "implementation", "tdd", "code-review"]

[project.urls]
Homepage = "https://github.com/piercelamb/deep-implement"
Repository = "https://github.com/piercelamb/deep-implement"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
pythonpath = ["."]
